# mailganer-api-mcp

./: .gitignore  README.md  config.py  docs_kb.py  mailganer_client.py  mcp.json.example  pyproject.toml  server.py  setup.sh
.cursor/: api-mcp.sh  postman-mcp.sh
.cursor/skills/manage-api-docs/: SKILL.md
.github/workflows/: sync-docs.yml
docs/: api-index.json  crosslinks.json  manual-crosslinks.json  overview.md  postman-index.json  sitemap-pages.json
docs/endpoints/: api-changelog.json  auth.json  documentation.json  email-add-mass.json  email-add.json  email-get.json  email-unsubscribe.json  email-update-mass.json  email-update.json  email-validate.json  mailing-create.json  mailing-get.json  mailing-get_id.json  mailing-send.json  mailing-stat.json  postback.json  recomend-layout-guide.json  recomend-orders.json  recomend-rfm_segment.json  segments-send_trigger.json  segments-sozdanie-segmenta.json  sites-get.json  sites-post.json  sites-set_webhook_url.json  sites-verify_domain.json  tags-add.json  tags-get.json  task-create.json  task-download.json  task-status.json  templates.json  trigger-create.json  trigger-emails.json  trigger-id_stat.json  trigger-meta.json  trigger-send-v2.json  trigger-stat-v2.json  triggers.json  user_var-add.json  user_var-get.json  (+8 more)
docs/postman/: collection.json
scripts/: build-crosslinks.py  sync-all-docs.sh  sync-api-docs.py  sync-postman.py
